definições de base de dados e criação das Tabela da BD

--- a/AppFotos/appsettings.json
+++ b/AppFotos/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-AppFotos-6958618b-2126-4196-8b4c-bf6ee630f549;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=tA-AppFotos;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
