--- a/AppFotos/AppFotos.csproj
+++ b/AppFotos/AppFotos.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>disable</Nullable>
+    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-AppFotos-6958618b-2126-4196-8b4c-bf6ee630f549</UserSecretsId>
   </PropertyGroup>
